--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <section class="property-binding">
 
     <article>
@@ -11,6 +12,48 @@
       <h3>Property Binding</h3>
       <img src="{{ urlImagem }}">
       <img [src]="urlImagem">
+    </article>
+
+    <article>
+      <h3>Class e Styles Binding</h3>
+      <div>
+          Selecione uma classe:
+          <select #classe (change)="0">
+              <option value="alert-success">Sucesso</option>
+              <option value="alert-info">Info</option>
+              <option value="alert-warning">Alerta</option>
+              <option value="alert-danger">Erro</option>
+            </select>
+            <br><br>
+
+          
+          
+          <div class="alert" role="alert"
+          [class.alert-success]="classe.value == 'alert-success' ">
+          Sucesso
+          </div>          
+
+          <div class="alert" role="alert"
+          [class.alert-info]="classe.value == 'alert-info'">
+            Informação
+          </div>
+
+          <div class="alert" role="alert"
+          [class.alert-warning]="classe.value == 'alert-warning'">
+            Alerta
+          </div>
+
+          <div class="alert" role="alert"
+          [class.alert-danger]="classe.value == 'alert-danger'">
+            erro
+          </div>
+          
+          <div class="alert alert-danger" role="alert"
+          [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">
+            Esse texto somente aparece em caso de erro.
+          </div>
+          
+      </div>
     </article>
 
 
